LLM4Config/assets/kokuwa_visual-regression-tracker.yaml
---
# Source: visual-regression-tracker/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vrt-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.5.10
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-visual-regression-tracker
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
---
# Source: visual-regression-tracker/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: vrt-postgresql-hl
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.5.10
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: visual-regression-tracker/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vrt-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.5.10
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: visual-regression-tracker/templates/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-visual-regression-tracker-api
  labels:
    helm.sh/chart: visual-regression-tracker-5.0.0
    app.kubernetes.io/name: visual-regression-tracker
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/version: "5.0.4"
    app.kubernetes.io/managed-by: Helm
    component: api
spec:
  type: ClusterIP
  ports:
    - port: 4200
      targetPort: api
      protocol: TCP
      name: api
  selector:
    app.kubernetes.io/name: visual-regression-tracker
    app.kubernetes.io/instance: my-visual-regression-tracker
---
# Source: visual-regression-tracker/templates/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-visual-regression-tracker-ui
  labels:
    helm.sh/chart: visual-regression-tracker-5.0.0
    app.kubernetes.io/name: visual-regression-tracker
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/version: "5.0.4"
    app.kubernetes.io/managed-by: Helm
    component: ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: visual-regression-tracker
    app.kubernetes.io/instance: my-visual-regression-tracker
---
# Source: visual-regression-tracker/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vrt-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.3.0
    helm.sh/chart: postgresql-15.5.10
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: vrt-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-visual-regression-tracker
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: vrt-postgresql
      labels:
        app.kubernetes.io/instance: my-visual-regression-tracker
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 16.3.0
        helm.sh/chart: postgresql-15.5.10
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: vrt-postgresql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-visual-regression-tracker
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:16.3.0-debian-12-r15
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "vrt" -d "dbname=vrt" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "vrt" -d "dbname=vrt" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: visual-regression-tracker/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-visual-regression-tracker
  labels:
    helm.sh/chart: visual-regression-tracker-5.0.0
    app.kubernetes.io/name: visual-regression-tracker
    app.kubernetes.io/instance: my-visual-regression-tracker
    app.kubernetes.io/version: "5.0.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  serviceName: visual-regression-tracker
  selector:
    matchLabels:
      app.kubernetes.io/name: visual-regression-tracker
      app.kubernetes.io/instance: my-visual-regression-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: visual-regression-tracker
        app.kubernetes.io/instance: my-visual-regression-tracker
    spec:
      serviceAccountName: my-visual-regression-tracker
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: visual-regression-tracker-api
          image: "visualregressiontracker/api:5.0.5"
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: api
          readinessProbe:
            httpGet:
              path: /health
              port: api
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
          volumeMounts:
            - name: my-visual-regression-tracker
              mountPath: /imageUploads
        - name: visual-regression-tracker-ui
          image: "visualregressiontracker/ui:5.0.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
          volumeMounts:
            - name: env
              mountPath: /usr/share/nginx/html/static/imageUploads
            - name: env
              mountPath: /usr/share/nginx/html/env.sh
              subPath: env.sh
            - name: env-config
              mountPath: /usr/share/nginx/html/env-config.js
              subPath: env-config.js
            - name: tmp
              mountPath: /var/cache/nginx
            - name: tmp
              mountPath: /var/run
      volumes:
        - name: env
          configMap:
            name: my-visual-regression-tracker-env-config
            defaultMode: 0777
        - name: env-config
          secret:
            secretName: my-visual-regression-tracker-env-config
        - name: tmp
          emptyDir:
            sizeLimit: 100Mi
        - name: vrt
          secret:
            secretName: my-visual-regression-tracker-vrt
  volumeClaimTemplates:
    - metadata:
        name: my-visual-regression-tracker
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "10Gi"
